feat: 보안 개선 및 문서 업데이트
- Firebase 설정 파일들을 .gitignore에 추가 (보안 강화)
- README.md에 주요 기능 상세 설명 추가
- FIREBASE_SETUP.md에 다른 컴퓨터에서 클론 시 가이드 추가
- Firebase 설정 파일 템플릿 추가 (.example 파일)
- 챌린지 초대 기능 추가
- 인증 상세 화면 추가

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,22 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+lib/firebase_options.dart
+firebase.json
+firebase-tools.exe
+firebase-tools
+cors.json
+
+# Local configuration
+local.properties
+*.local
+
+# Keys and secrets
+*.key
+*.p12
+*.p8
+*.json.key
