feat: - ?뚯썝媛??諛?濡쒓렇???먮윭 ?섏젙 - 梨뚮┛吏 ?곸꽭 ?섏젙

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,16 @@ local.properties
 *.p12
 *.p8
 *.json.key
+# Android signing keys
+android/key.properties
+android/app/challenge-key.jks
+*.jks
+*.keystore
+
+# Documentation and setup files (local development only)
+*.md
+!README.md
+*.txt
+!windows/**/*.txt
+*.bat
+*.ps1
