feat: 인증 알림 시스템, 인증 삭제, 종료된 챌린지 참가 제한, 일일 인증 제한 기능 추가
- 인증 알림 시스템 구현 (앱 내 알림)
- 본인 인증 삭제 기능 추가
- 종료된 챌린지 참가 신청 제한
- 하루에 한번만 인증 가능하도록 제한
- Firebase Hosting 웹 배포 완료

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
                      android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     
+    <!-- 알림 권한 (Android 13 이상) -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     
     <application
