--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^12.3.6
   table_calendar: ^3.1.2
   flutter_local_notifications: ^18.0.1
+  image: ^4.1.7
 
 dev_dependencies:
   flutter_test:
